fix subject overflow

--- a/style/style.css
+++ b/style/style.css
@@ -268,6 +268,14 @@ body a:visited {
     background: #CFCFCF;
 }
 
+#content div.scroll {
+    width: 495px;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
+
 #content td.getcert {
     /* t r b l */
     padding: 10px 15px 10px 15px;
